--- a/nodepop/views/index.ejs
+++ b/nodepop/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/anuncios"> Pulsa para consultar todos los anuncios</a>
   </body>
 </html>
