--- a/nodepop/views/anuncios.ejs
+++ b/nodepop/views/anuncios.ejs
@@ -1,7 +1,32 @@
-<%- include('header') %>
 
-<h2>Anuncios</h2>
-<% anuncios.forEach(anuncio => { %>
-    <p>Producto <%= anuncio.articulo %> precio <%= anuncio.precio %> años</p>
-    <% }) %>
-<%- include('footer') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <%- include('./head'); %> 
+</head>
+<body class="container">
+
+<header>
+    <%- include('./header'); %>
+</header>
+
+<main>
+    <h2>Anuncios</h2>
+    <div class="flex-container">
+        <% anuncios.forEach(anuncio => { %>
+            <div class="flex-element">
+                <p class="title"><%= anuncio.articulo %></p>
+                <img src="images/<%=anuncio.imagen%>">
+                <p class="price " venta="<%= anuncio.venta %>"><%= anuncio.precio %> €</p>
+            </div>
+        <% }) %>
+    </div>
+  
+</main>
+
+<footer>
+    <%- include('./footer'); %>
+</footer>
+
+</body>
+</html>
