Versión preparada para la entrega

--- a/nodepop/views/anuncios.ejs
+++ b/nodepop/views/anuncios.ejs
@@ -13,15 +13,13 @@
 <main>
     <h2>Anuncios</h2>
     <form >
-        <div class="element-form">
-            <label for="idArticulo">Artículo</label>
-            <input type="text" id="idArticulo" name="articulo" placeholder="Busque por artículo">
-        </div>
-        <div class="element-form">
-            <input type="submit" value="Buscar">
+        <div>
+            <input type="text" id="idArticulo" name="articulo"
+                class="search-box"
+                placeholder=" 🔍    Busque en nuestro catálogo">
+            <input type="submit" value="Buscar" class="search-button">
         </div>
       </form>
-    <hr>
     <div class="flex-container">
         <% anuncios.forEach(anuncio => { %>
             <div class="flex-element">
@@ -32,7 +30,11 @@
                 <% } else { %>
                     <p class="price " venta="<%= anuncio.venta %>"> Se compra <%= anuncio.precio %> €</p>
                  <% } %>
-                <p> Tags <%= anuncio.tags%></p>
+                <div class="tag-box">
+                    <% anuncio.tags.forEach(tag => { %>
+                        <span class="tag"> <%= tag %></span>
+                    <% }) %>
+                </div> 
             </div>
         <% }) %>
     </div>
