--- a/nodepop/public/stylesheets/style.css
+++ b/nodepop/public/stylesheets/style.css
@@ -6,19 +6,24 @@ body {
 a {
   color: #00B7FF;
 }
+form{
+  margin-bottom: 30px;
+}
 /* Lista de artículos */
 
 .flex-container {
+  margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
   width:60%;
   margin: 0 auto;
-  gap:20px
+  gap:30px
 }
 
 .flex-element {
-  background-color: beige;
-  border: 1px solid none;
+  /* background-color: beige; */
+  box-shadow: 5px 5px 10px grey,-5px -5px 10px grey ; 
+  
   border-radius: 10px;
   width: 300px;
   padding: 3px 30px
@@ -42,11 +47,23 @@ p[venta=false]{
   width: 250px;
   height: 250px;
 }
-/* Form */
-.element-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 10px 10px;
-  gap: 10px;
+.search-box{
+  width:80%
+
+}
+.search-button{
+  width:15%;
+  border-radius:10px;
+  border:0px;
+  background-color: #c2c2c2c9;
+  padding: 4px 0;
+}
+.tag-box{
+  margin-bottom: 10px;
+}
+.tag{
+  background-color: #b6b7b766;
+  border: 0px solid black;
+  border-radius: 20px;
+  padding: 5px;
 }
