--- a/nodepop/views/footer.ejs
+++ b/nodepop/views/footer.ejs
@@ -1,2 +1,2 @@
 <h1>Footer</h1>
-<p class="text-center text-muted">© Copyright 2023 Nodepop 🚫©🚫</p>
+<p class="text-center text-muted">© Copyright 2023 Nodepop ©</p>
